apps/base/bugzilla/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bugzilla
    labels:
        app.kubernetes.io/name: bugzilla
        app.kubernetes.io/instance: bugzilla
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: bugzilla
            app.kubernetes.io/instance: bugzilla
    template:
        metadata:
            labels:
                app.kubernetes.io/name: bugzilla
                app.kubernetes.io/instance: bugzilla
            annotations:
                prometheus.io/scrape: "true"
                prometheus.io/port: "9117"
        spec:
            containers:
                - name: bugzilla
                  image: ghcr.io/mtrnord/bugzilla:latest
                  imagePullPolicy: Always
                  securityContext:
                      runAsUser: 10001
                      runAsGroup: 10001
                      fsGroup: 10001
                  ports:
                      - name: http
                        containerPort: 8000
                        protocol: TCP
                  livenessProbe:
                      httpGet:
                          path: /
                          port: http
                  readinessProbe:
                      httpGet:
                          path: /
                          port: http
                  volumeMounts:
                      - mountPath: /app/data
                        name: bugzilla-data
            volumes:
                - name: bugzilla-data
                  persistentVolumeClaim:
                      claimName: bugzilla-data
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
          enc: |
              -----BEGIN AGE ENCRYPTED FILE-----
              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxR2VpR3NzYUROZHVRdS8z
[...]
              OsF9LwNwlm4Pu0l1qSBsQCxB9G/QwIaAxOFOMUd3mNylGavv32q3XQ==
              -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-11-22T17:47:56Z"
    mac: ENC[AES256_GCM,data:f8VnFzvVZVKGwFdr9AcNs0O0ru5N5NO+qrX1yORCvdE4A3QyymsXH+Oa+hKje/zrA5APfR3U1uJFD1JkwMT7ppA2j25bNJzWgDEHPT7fo98wVMOEC7JXej2GRpJxmS7eV/dvS3aPOSAhCT5693fGJHcudbZ6IMqS+2L9PqfU7TU=,iv:rGYc/8Zi2N4yX35GibZR/0ACEkjDjwbgkKWY/KqG6ds=,tag:KFyDEzzN9sLklqLZUZp7kA==,type:str]
    pgp: []
    encrypted_regex: ^(routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_secret|secret_key_base|otp_secret|private_key|public_key|primaryKey|deterministicKey|keyDerivationSalt|token|clientId|secretKey|installationId|installationKey|uriOverride|adminToken.value|password.value|sql_password|erlangCookie|AUTHENTICATION_PASSWORD|ROOM_API_SECRET_KEY|adminPassword|configPassword|adminUser|configUser|MAIL_PASSWORD|A [...]
    version: 3.9.1
---
apiVersion: v1
kind: Service
metadata:
    name: bugzilla
    labels:
        app.kubernetes.io/name: bugzilla
        app.kubernetes.io/instance: bugzilla
spec:
    ports:
        - name: http
          port: 8000
          targetPort: http
    selector:
        app.kubernetes.io/name: bugzilla
        app.kubernetes.io/instance: bugzilla
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
          enc: |
              -----BEGIN AGE ENCRYPTED FILE-----
              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxR2VpR3NzYUROZHVRdS8z
[...]
              OsF9LwNwlm4Pu0l1qSBsQCxB9G/QwIaAxOFOMUd3mNylGavv32q3XQ==
              -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-11-22T17:47:56Z"
    mac: ENC[AES256_GCM,data:f8VnFzvVZVKGwFdr9AcNs0O0ru5N5NO+qrX1yORCvdE4A3QyymsXH+Oa+hKje/zrA5APfR3U1uJFD1JkwMT7ppA2j25bNJzWgDEHPT7fo98wVMOEC7JXej2GRpJxmS7eV/dvS3aPOSAhCT5693fGJHcudbZ6IMqS+2L9PqfU7TU=,iv:rGYc/8Zi2N4yX35GibZR/0ACEkjDjwbgkKWY/KqG6ds=,tag:KFyDEzzN9sLklqLZUZp7kA==,type:str]
    pgp: []
    encrypted_regex: ^(routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_secret|secret_key_base|otp_secret|private_key|public_key|primaryKey|deterministicKey|keyDerivationSalt|token|clientId|secretKey|installationId|installationKey|uriOverride|adminToken.value|password.value|sql_password|erlangCookie|AUTHENTICATION_PASSWORD|ROOM_API_SECRET_KEY|adminPassword|configPassword|adminUser|configUser|MAIL_PASSWORD|A [...]
    version: 3.9.1
---
# Ingress for bugzilla
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bugzilla
    labels:
        app.kubernetes.io/name: bugzilla
        app.kubernetes.io/instance: bugzilla
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    rules:
        - host: bugzilla.midnightthoughts.space
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: bugzilla
                            port:
                                number: 8000
    tls:
        - hosts:
              - bugzilla.midnightthoughts.space
          secretName: bugzilla
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
          enc: |
              -----BEGIN AGE ENCRYPTED FILE-----
              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxR2VpR3NzYUROZHVRdS8z
[...]
              OsF9LwNwlm4Pu0l1qSBsQCxB9G/QwIaAxOFOMUd3mNylGavv32q3XQ==
              -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-11-22T17:47:56Z"
    mac: ENC[AES256_GCM,data:f8VnFzvVZVKGwFdr9AcNs0O0ru5N5NO+qrX1yORCvdE4A3QyymsXH+Oa+hKje/zrA5APfR3U1uJFD1JkwMT7ppA2j25bNJzWgDEHPT7fo98wVMOEC7JXej2GRpJxmS7eV/dvS3aPOSAhCT5693fGJHcudbZ6IMqS+2L9PqfU7TU=,iv:rGYc/8Zi2N4yX35GibZR/0ACEkjDjwbgkKWY/KqG6ds=,tag:KFyDEzzN9sLklqLZUZp7kA==,type:str]
    pgp: []
    encrypted_regex: ^(routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_secret|secret_key_base|otp_secret|private_key|public_key|primaryKey|deterministicKey|keyDerivationSalt|token|clientId|secretKey|installationId|installationKey|uriOverride|adminToken.value|password.value|sql_password|erlangCookie|AUTHENTICATION_PASSWORD|ROOM_API_SECRET_KEY|adminPassword|configPassword|adminUser|configUser|MAIL_PASSWORD|A [...]
    version: 3.9.1
